--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "memory.h": "c",
-        "bios.h": "c"
+        "bios.h": "c",
+        "string": "c"
     }
 }
