--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,25 @@
     // Focalizar para exibir as descrições dos atributos existentes.
     // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "Run",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/iLEmu-system-x86_64",
+            "args": [
+                "-bios",
+                "${workspaceFolder}/bios/bios.bin",
+                "-memory",
+                "16"
+            ],
+            "environment": [
+                {
+                    "name": "config",
+                    "value": "Debug"
+                }
+            ],
+            "cwd": "${workspaceFolder}"
+        }
+    ]
 }
