--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "memory.h": "c",
         "bios.h": "c",
         "string": "c",
-        "cstdint": "c"
+        "cstdint": "c",
+        "optional": "c"
     }
 }
