--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "bios.h": "c",
         "string": "c",
         "cstdint": "c",
-        "optional": "c"
+        "optional": "c",
+        "string_view": "cpp"
     }
 }
