--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "string": "c",
         "cstdint": "c",
         "optional": "c",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "bit": "c",
+        "initializer_list": "c"
     }
 }
