--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "array": "c",
         "string_view": "c",
         "initializer_list": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "cpu_x86.h": "c"
     }
 }
