--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "string_view": "c",
         "initializer_list": "c",
         "string.h": "c",
-        "cpu_x86.h": "c"
+        "cpu_x86.h": "c",
+        "bios_string.h": "c"
     }
 }
